<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProfessionalTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="imageContentDescription">imagen de bienvenida</string>
    <string name="buttonTest">Test</string>
    <string name="buttonBuscar">Buscar</string>
    <string name="buttonInstrucciones">Instrucciones</string>
    <string name="textExplain">Anímate y descubre tu vocación!!!!!!!</string>
    <string name="textTitle">Professional Test</string>
    <string name="textDescripcion">Responde las preguntas, todas son importantes. Entre mas concentrado estés, mas confiable sera el resultado.</string>
    <string name="title_activity_buscar">Búsqueda de Carreras</string>
    <string name="textDepartamento">Departamento</string>
    <string name="textMunicipio">Municipio</string>
    <string name="textCarrera">Carrera</string>
    <string name="message">Ha seleccionado %1$s (%2$s)</string>
    <string name="departamentoPrompt">Elija un Departamento</string>
    <string name="title_activity_preguntas">Test vocacional</string>
    <string name="textModulo">A) Qué tanto te agrada?:</string>
    <string name="textPreguntas">1.-Salir de excursión</string>
    <string name="textPreguntas2">2.-Amar y desarmar objetos mecánicos</string>
    <string name="textPreguntas3">3.-Resolver mecanizaciones numéricas</string>
    <string name="textPreguntas4">4.-Discutir en clase</string>
    <string name="buttonAceptar">Aceptar</string>
    <string name="title_activity_instrucciones">Instrucciones</string>
    <string name="textInstruc">Instrucciones</string>
    <string name="textInstrucciones">A continuación se presenta una lista de actividades comunes sobre las cuales puedes haber tenido ya alguna experiencia personal.</string>
    <string name="textExplicacion"></string>

</resources>