<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr7.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/textTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/textDescripcion"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="165dp"
        android:layout_height="110dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="1.7"
        android:contentDescription="@string/imageContentDescription"
        android:src="@drawable/bienvenida" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.73"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/textExplain"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" >

        <Button
            android:id="@+id/buttonBuscar"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="throwBuscarActivity"
            android:text="@string/buttonBuscar" />

        <Button
            android:id="@+id/button2"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonTest" />

        <Button
            android:id="@+id/button3"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonInstrucciones" />
    </LinearLayout>

</LinearLayout>