<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr7.PreguntasActivity" >

    <TextView
        android:id="@+id/textInstrucciones"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.07"
        android:text="@string/textModulo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.09"
        android:text="@string/textPreguntas"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RatingBar
            android:id="@+id/ratingBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.09"
        android:text="@string/textPreguntas2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RatingBar
        android:id="@+id/ratingBar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.07" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.09"
        android:text="@string/textPreguntas3"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RatingBar
        android:id="@+id/ratingBar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.07" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.09"
        android:text="@string/textPreguntas4"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RatingBar
        android:id="@+id/ratingBar4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.07" />

    <Button
        android:id="@+id/buttonInstrTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:text="@string/buttonAceptar" />

</LinearLayout>